tests/ui/rfcs/rfc-2632-const-trait-impl/super-traits-fail-3.nn.stderr
error: ~const can only be applied to `#[const_trait]` traits
  --> $DIR/super-traits-fail-3.rs:12:19
   |
LL | trait Bar: ~const Foo {}
   |                   ^^^

error: ~const can only be applied to `#[const_trait]` traits
  --> $DIR/super-traits-fail-3.rs:12:19
   |
LL | trait Bar: ~const Foo {}
   |                   ^^^

error: ~const can only be applied to `#[const_trait]` traits
  --> $DIR/super-traits-fail-3.rs:16:24
   |
LL | const fn foo<T: ~const Bar>(x: &T) {
   |                        ^^^

error: aborting due to 3 previous errors

